CUI: label: prevent too much margin at the top

--- a/src/scss/themes/fylr/components/_labels.scss
+++ b/src/scss/themes/fylr/components/_labels.scss
@@ -214,7 +214,7 @@ label[data-label-clickable],
 	display: flex;
 	line-height: $line-height-sm;
 
-	& + & {
+	&:not(.cui-template-empty) + & {
 		margin-top: $spacer-sm;
 	}
 
